# home-gpt

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
home_gpt/: record.py  server.py  wake_word.py  whisper.py
home_gpt/temp_audio/: test_ts_song.m4a
