[tool.poetry]
name = "home-gpt"
version = "0.1.0"
description = ""
authors = ["Han Hwang Lim <hanhwanglim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openwakeword = "^0.5.1"
pyaudio = "^0.2.14"
speechrecognition = "^3.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
